samples/_failures_safe/1761396010_940079_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_aacd59a8.c: In function ‘main’:
./samples/SAFE/__tmp_aacd59a8.c:152:13: error: expected expression at end of input
  152 |             if (
      |             ^~
./samples/SAFE/__tmp_aacd59a8.c:152:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_aacd59a8.c:152:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_aacd59a8.c:152:13: error: expected declaration or statement at end of input
